--- a/SpringExamples/pom.xml
+++ b/SpringExamples/pom.xml
@@ -26,5 +26,10 @@
     	<artifactId>spring</artifactId>
     	<version>2.5.6</version>
     </dependency>
+    <dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-context</artifactId>
+    	<version>3.2.2.RELEASE</version>
+    </dependency>
   </dependencies>
 </project>
